CSS rule overflow-x prevented Eui drag and drop items reordering in a custom plugin

--- a/src/legacy/ui/public/chrome/directives/_kbn_chrome.scss
+++ b/src/legacy/ui/public/chrome/directives/_kbn_chrome.scss
@@ -5,7 +5,6 @@
  */
 // SASSTODO: Naming here is too embedded and high up that changing them could cause major breaks
 #kibana-body {
-  overflow-x: hidden;
   min-height: 100%;
 }
 
